--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "angularfire2": "^5.4.2",
+    "chart.js": "^2.9.4",
     "firebase": "^7.24.0",
+    "ng2-charts": "^2.4.3",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
