--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
                             "src/_redirects"
                         ],
                         "styles": [
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/styles.css",
                             "node_modules/ngx-toastr/toastr.css"
                         ],
