--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@angular/core": "~12.0.0",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.0.0",
+    "@angular/localize": "~12.0.0",
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "angularfire2": "^5.4.2",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.4",
     "firebase": "^7.24.0",
     "ng2-charts": "^2.4.3",
